/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Miguel Rosario
 */
package baseline;

public class Solution43 {
    public static void main(String[] args) {
        // Create a Website object.
        Website app = new Website();
        // Call promptForWebsiteInfo on the website object.
        app.promptForWebsiteInfo();
        // Call createWebsite on the website object.
        app.createWebsite();
    }
}
